@@ -9,6 +9,13 @@ mm_min_matches = 200
 mm_min_matches_preference = 1.0
 
 # [SHOW]
+show_colors = true 
+# allowed colors: BLACK, RED, GREEN, YELLOW, BLUE, MAGENTA, CYAN, WHITE, DEFAULT (DEFAULT means using default terminal color)
+# you can also use BRIGHT_ and DIM_ prefixes (e.g. BRIGHT_RED) to make the color brighter/darker (note that DIM_ doesn't work in most terminals)
+header_color = "BRIGHT_DEFAULT"
+even_row_color = "YELLOW"
+odd_row_color = "DEFAULT"
+
 date_format = "%Y/%m/%d %H:%M:%S" # more about the format: https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes
 # ? at the end means that the column is optional and it's only visible when it contains different values
 # .X at the end means that the values of the column are going to be rounded to X decimals
